--- a/src/docs/styles.css
+++ b/src/docs/styles.css
@@ -1,3 +1,7 @@
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+
+.simple-form .full-width {
+  flex-basis: 100%;
+}
