--- a/src/lib/wafo-forms.css
+++ b/src/lib/wafo-forms.css
@@ -53,7 +53,7 @@ label {
   z-index: 100;
   width: 100%;
   top: 65px;
-  padding: 0 15px;
+  /*padding: 0 15px;*/
 }
 
 .wafoformautocomplete>.results ul {
@@ -67,6 +67,7 @@ label {
 .wafoformautocomplete>.results ul li {
   padding: .5rem .25rem;
   border-bottom: 1px solid #f2f2f2;
+  cursor: pointer !important;
 }
 
 .wafoformautocomplete>.results ul li:last-child {
@@ -84,6 +85,7 @@ label {
   color: #777;
   padding: .25rem;
   background-color: #f5f5f5;
+  cursor: default !important;
 }
 
 .wafoformautocomplete>.results ul .footer:hover {
