--- a/src/lib/wafo-forms.css
+++ b/src/lib/wafo-forms.css
@@ -12,26 +12,26 @@
 
 label {
   display: block;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .form-control {
   display: block;
   width: 100%;
   height: calc(2.25rem + 2px);
-  padding: .375rem .75rem;
+  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ccc;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   box-sizing: border-box;
 }
 
 .form-text {
-  margin-top: .25rem;
+  margin-top: 0.25rem;
   font-size: 80%;
 }
 
@@ -43,12 +43,15 @@ label {
   font-weight: 700;
 }
 
-/* Autocomplete */
+/** *********************************** */
+/** Autocomplete */
+/** *********************************** */
+
 .wafoformautocomplete {
   position: relative;
 }
 
-.wafoformautocomplete>.results {
+.wafoformautocomplete > .results {
   position: absolute;
   z-index: 100000;
   width: 100%;
@@ -56,7 +59,7 @@ label {
   /*padding: 0 15px;*/
 }
 
-.wafoformautocomplete>.results ul {
+.wafoformautocomplete > .results ul {
   background-color: #fff;
   border: 1px solid #f5f5f5;
   margin: 0;
@@ -65,30 +68,104 @@ label {
   overflow-y: auto;
 }
 
-.wafoformautocomplete>.results ul li {
-  padding: .5rem .25rem;
+.wafoformautocomplete > .results ul li {
+  padding: 0.5rem 0.25rem;
   border-bottom: 1px solid #f2f2f2;
   cursor: pointer !important;
 }
 
-.wafoformautocomplete>.results ul li:last-child {
+.wafoformautocomplete > .results ul li:last-child {
   border-bottom: none;
 }
 
-.wafoformautocomplete>.results ul li:hover,
-.wafoformautocomplete>.results ul li:focus {
+.wafoformautocomplete > .results ul li:hover,
+.wafoformautocomplete > .results ul li:focus {
   background-color: #eee;
 }
 
-.wafoformautocomplete>.results .footer {
+.wafoformautocomplete > .results .footer {
   font-size: 0.8em;
   font-weight: bold;
   color: #777;
-  padding: .25rem;
+  padding: 0.25rem;
   background-color: #f5f5f5;
   cursor: default !important;
 }
 
-.wafoformautocomplete>.results ul .footer:hover {
+.wafoformautocomplete > .results ul .footer:hover {
   background-color: #f5f5f5;
+}
+
+/** *********************************** */
+/** Multiselect */
+/** *********************************** */
+
+.wafoformmultiselect {
+  position: relative;
+}
+
+.wafoformmultiselect > .input-wrapper {
+  display: flex;
+}
+
+.wafoformmultiselect > .input-wrapper > input {
+  border-right: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  background-color: #fff !important;
+}
+
+.wafoformmultiselect > .input-wrapper > button {
+  border: 1px solid #ccc;
+  border-left: none;
+  border-radius: 0.25rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.wafoformmultiselect > .input-wrapper.down > input {
+  border-bottom-left-radius: 0;
+}
+
+.wafoformmultiselect > .input-wrapper.down > button {
+  border-bottom-right-radius: 0;
+}
+
+.wafoformmultiselect > .list-wrapper {
+  background-color: #efefef;
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  border: 1px solid #ccc;
+  border-top: none;
+  z-index: 100;
+  position: absolute;
+  width: calc(100% - 32px);
+}
+
+.wafoformmultiselect > .list-wrapper > ul {
+  list-style: none;
+  margin-bottom: 0;
+  padding: 0.5rem;
+  max-height: 10rem;
+  overflow-y: auto;
+}
+
+.wafoformmultiselect > .list-wrapper > ul > li {
+  background-color: #fff;
+  padding: 0.25rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid #efefef;
+  cursor: pointer;
+}
+
+.wafoformmultiselect > .list-wrapper > .list-empty {
+  padding: 0.5rem;
+}
+
+.wafoformmultiselect > .list-wrapper > .list-empty > div {
+  background-color: #fff;
+  padding: 0.25rem 1rem;
+  color: #4f4f4f;
 }
