--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -3,8 +3,8 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  /* margin-left: -15px;
-  margin-right: -15px; */
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .form-group {
